--- a/css/style.css
+++ b/css/style.css
@@ -11,102 +11,193 @@ a {
   text-decoration: none;
 }
 
-h3 {
+/* .title {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
 }
 
-p {
+.text {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.32px;
-}
+} */
 
 /* header */
 
-.logo > a {
+.logo {
   color: #4d5ae5;
-  font-family: "Raleway";
+  font-family: "Raleway" sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 21px; /* 116.667% */
-  letter-spacing: 0.54px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
   text-transform: uppercase;
 }
 
-.logo span {
+.half-logo {
   color: #2e2f42;
 }
-nav a {
-  color: #434455;
+
+.half-logo {
+  color: #404bbf;
+}
+.main-item {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  color: #2e2f42;
 }
 
-nav a:hover {
+.main-item:hover {
   color: #404bbf;
 }
 
-address a {
+.address {
+  font-style: normal;
+}
+
+.address-main {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #434455;
 }
 
-address a:hover {
+.address-main:hover {
   color: #404bbf;
 }
 
-.team {
-  background-color: #f4f4fd;
+.address-main:focus {
+  color: #404bbf;
 }
 
 /* section 1 */
-h1 {
+.main-section-title {
   color: #ffffff;
   text-align: center;
   font-size: 56px;
   font-weight: 700;
-  line-height: 60px;
-  letter-spacing: 1.12px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 
-button {
+.main-section-button {
+  background-color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
   cursor: pointer;
+}
+
+.main-section-button:hover {
+  background-color: #404bbf;
+}
+
+.main-section-button:active {
+  background-color: #404bbf;
 }
 
 .main-section {
   background: #2e2f42;
 }
 
+/* section 2 */
+
+.article-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.article-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* section 3 */
+.team {
+  background-color: #f4f4fd;
+}
+
+.team-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.team-item {
+  background-color: #ffffff;
+}
+
+.team-list-header {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.teat-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* section 4 */
+
+.portfolio-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.portfolio-list-header {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
 /* footer */
 
-footer {
+.footer {
   background-color: #2e2f42;
 }
 
-footer a {
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   color: #4d5ae5;
-  font-family: "Raleway";
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0.54px;
   text-transform: uppercase;
 }
 
-.bottom-logo span {
+.half-footer-logo {
   color: #f4f4fd;
-  font-family: Raleway;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
 }
 
-footer p {
+.footer-text {
+  line-height: 1.5;
   color: #f4f4fd;
-  font-size: 16px;
-
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
 }
