--- a/css/style.css
+++ b/css/style.css
@@ -11,29 +11,15 @@ a {
   text-decoration: none;
 }
 
-/* .title {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.4px;
-}
-
-.text {
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.32px;
-} */
-
 /* header */
 
 .logo {
   color: #4d5ae5;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
@@ -41,9 +27,6 @@ a {
   color: #2e2f42;
 }
 
-.half-logo {
-  color: #404bbf;
-}
 .main-item {
   font-size: 16px;
   font-weight: 500;
@@ -53,6 +36,9 @@ a {
 }
 
 .main-item:hover {
+  color: #404bbf;
+}
+.main-item:focus {
   color: #404bbf;
 }
 
@@ -102,6 +88,9 @@ a {
 .main-section-button:active {
   background-color: #404bbf;
 }
+.main-section-button:focus {
+  color: #404bbf;
+}
 
 .main-section {
   background: #2e2f42;
@@ -150,7 +139,7 @@ a {
   color: #2e2f42;
 }
 
-.teat-text {
+.team-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -161,9 +150,8 @@ a {
 
 .portfolio-title {
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.5;
   text-align: center;
-  letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
 }
@@ -174,6 +162,11 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+
+.portfolio-text {
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 /* footer */
