--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ a {
   background-color: #404bbf;
 }
 .main-section-button:focus {
-  color: #404bbf;
+  background-color: #404bbf;
 }
 
 .main-section {
@@ -150,7 +150,7 @@ a {
 
 .portfolio-title {
   font-size: 36px;
-  line-height: 1.5;
+  line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
@@ -166,6 +166,7 @@ a {
 
 .portfolio-text {
   letter-spacing: 0.02em;
+  line-height: 1.5;
   color: #434455;
 }
 
